FIX Fixed the text overflow inside the leaflet popups

--- a/Facades/js/themes/jeasyui.exface.css
+++ b/Facades/js/themes/jeasyui.exface.css
@@ -270,6 +270,8 @@ pre.sf-dump .sf-dump-private, pre.sf-dump .sf-dump-public, pre.sf-dump .sf-dump-
 /* Map */
 .exf-map-popup h3 {padding-left: 0}
 .exf-map-popup-table > tbody > tr > td:nth-of-type(2) {font-weight: bold}
+.exf-map-popup .exf-map-popup-table td {vertical-align: top;}
+.exf-map-popup .exf-map-popup-table td:last-child {overflow-wrap: anywhere; word-break: break-word;}
 .exf-map .extra-marker > i.fa-map-marker {margin-top: 8px;}
 .exf-map .leaflet-marker-icon.selected::before {
     content: '';
